<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileBox</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_activity_files_list">FilesListActivity</string>
    
    <string name="label_login">Login</string>
    <string name="login_in_progress">Login in progress, stay still</string>
    <string name="login_success">Login succed</string>
    <string name="login_failed">Login failed</string>
    
    <string name="label_file_open">Ouvrir le fichier</string>
    <string name="img_detail_name">Mimetype Image</string>
    <string name="label_file_name">Nom du fichier :</string>
    <string name="label_file_name_unknown">XXXXXXX</string>
    <string name="label_file_type">Type de fichier :</string>
    <string name="label_file_type_unknown">XXX</string>
    <string name="label_file_modification_last">Date de dernière modification :</string>
    <string name="label_file_modification_last_unknown">XX/XX/XXXX</string>

</resources>